﻿CHANGELOG 2.5 com_clm_ext ab 1.1.0 --> 3.x ab 3.2.2
------------

Legend:
* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
% -> Performance Fix
- -> Removed
! -> Note

- - - - - 3.6.1 - [11-05-2022] - - - - - - - - - - - - - - - - - - - -
+ Übernahme der pgn-Partie-Links zum Nachspielen
+ Mehrsprachigkeit eingebaut

- - - - - 3.6.0 - [31-01-2022] - - - - - - - - - - - - - - - - - - - -
+ Externe Daten als Menüeintragstyp verfügbar

- - - - - 3.5.1 - [01-01-2022] - - - - - - - - - - - - - - - - - - - -
^ idna_convert Anpassung php 7.4

- - - - - 3.5.0 - [12-10-2021] - - - - - - - - - - - - - - - - - - - -
^ Code-Anpassung Joomla 4.0

- - - - - 3.4.1 - [14-09-2020] - - - - - - - - - - - - - - - - - - - -
+ View Liga_Info
^ Umleitung Rangliste zu Paarungsliste bei KO-Modus

- - - - - 3.4.0 - [26-11-2018] - - - - - - - - - - - - - - - - - - - -
^ GET-Parameter url ersetzt durch Module-Parameter

- - - - - 3.3.2 - [xx-xx-2018] - - - - - - - - - - - - - - - - - - - -
+ View Aktuelle Runde

- - - - - 3.3.1 - [16-07-2017] - - - - - - - - - - - - - - - - - - - -
# Umsetzen pdf-Links
^ idna_convert Anpassung an PHP7

- - - - - 3.3.0 - [01-11-2016] - - - - - - - - - - - - - - - - - - - -
# class idna_convert Mehrfachverwendung

- - - - - 3.2.4 - [30-10-2015] - - - - - - - - - - - - - - - - - - - -
# Bereinigung der repo-Struktur
# Nachbesserung css-Technik
+ Unterstützung von Quellseiten mit Mehrsprachigkeit

- - - - - 3.2.3 - [07-09-2015] - - - - - - - - - - - - - - - - - - - -
# Joomla 3.x Support
# Umstellung der css-Technik

- - - - - 3.2.2 - [19-04-2015] - - - - - - - - - - - - - - - - - - - -
# Joomla 3.x Support
+ eigenständige source für J!3.x

- - - - - 1.2.2 - [06-08-2014] - - - - - - - - - - - - - - - - - - - -
# Joomla 3.x Support
^ Code Bereinigung

- - - - - 1.2.1 - [18-04-2014] - - - - - - - - - - - - - - - - - - - -
^ Neues Submenue analog Hauptkomponente
