@@ -2,13 +2,13 @@
 <!DOCTYPE install SYSTEM "http://dev.joomla.org/xml/1.5/component-install.dtd">
 <extension type="component" version="1.6.0" method="upgrade">
 	<name>COM_CLM_EXT</name>
-	<creationDate>11.05.2022</creationDate>
+	<creationDate>08.03.2023</creationDate>
 	<author>CLM Projekt</author>
-	<copyright>(C) Copyright 2009-2022 by CLM Project</copyright>
+	<copyright>(C) Copyright 2009-2023 by CLM Project</copyright>
 	<license>GPL</license>
 	<authorEmail>fishpoke@fishpoke.de</authorEmail>
 	<authorUrl>www.chessleaguemanager.de</authorUrl>
-	<version>3.6.1</version>
+	<version>4.0.0</version>
 	<description>
 		<![CDATA[
 		 <h3>CLM Extern Komponente :</h3>
